<resources>
    <string name="app_name">Dummy UI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="rank_2">Rank 2</string>
    <string name="rank">Rank</string>
    <string name="km">Km</string>
    <string name="number">12536</string>
    <string name="kety">KETY</string>
    <string name="go_explicit">Go Explicit</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="fragment_3">Fragment 3</string>
</resources>