<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/item_bg"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/rankImg"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="-10dp"
                        android:layout_marginTop="-20dp"
                        android:layout_alignBottom="@+id/imgCardView"
                        android:layout_toEndOf="@+id/imgCardView"
                        android:contentDescription="@string/todo" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/imgCardView"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:cardCornerRadius="50dp">

                        <ImageView
                            android:id="@+id/itemImg"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/sunset"
                            android:contentDescription="@string/todo" />

                    </androidx.cardview.widget.CardView>



                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="8dp"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/rankTitle"
                        android:text="@string/rank_2"
                        android:textColor="@color/white"
                        android:fontFamily="@font/acme"
                        android:textSize="18sp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/rankDesc"
                        android:text="@string/rank"
                        android:textColor="@color/white2"
                        android:fontFamily="@font/acme"
                        android:textSize="14sp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>




            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/lined_curved_bg"
                    android:layout_alignParentEnd="true"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/kiloMeter"
                        android:text="@string/number"
                        android:textColor="@color/white"
                        android:fontFamily="@font/acme"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/unitKm"
                        android:text="@string/km"
                        android:textColor="@color/white"
                        android:fontFamily="@font/acme"
                        android:textSize="18sp"
                        android:layout_marginHorizontal="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>